# sifli-hal-rs

./: .gitignore
examples/sf32lb52x/: Cargo.toml
sifli-hal/: Cargo.toml  README.md
sifli-hal/src/: efuse.rs  gpio.rs  lib.rs  syscfg.rs
sifli-hal/src/pmu/: dvfs.rs  mod.rs
sifli-hal/src/rcc/: clock.rs  clock_configure.rs  mod.rs
