[package]
name = "sf32lb52x"
version = "0.0.0"
edition = "2021"

[dependencies]
sifli-hal = { path = "../../sifli-hal", features = ["sf32lb52x", "defmt"] }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["set-sp", "set-vtor"] }
cortex-m-semihosting = { version = "0.5" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
# panic-halt = "*"

embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = "0.1.1"

embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }

defmt = "0.3"
defmt-rtt = "0.4"

[patch.crates-io]
cortex-m-rt = {path = "F:/Projects2/11-sifli/cortex-m/cortex-m-rt"}